* PowerMock now supports mocking instance methods of final system classes (such as java.lang.String). To do this you need to prepare the class that invokes the method of the system class as well as the actual test case. Note that partial mocking of instance methods in final system classes doesn't work yet.


Change log 1.2.5 (released 2009-05-05)
--------------------------------------
* Mocking of static methods in final system classes such as java.lang.System now works. To do this you need to prepare the class that invokes the method of the system class as well as the actual test case.
* Fixed a major issue with mock policies which caused them to fail if a test case had more than one test method. Also fixed so that mock policies works in "setup" methods.
* Fixed so that WhiteboxImpl#getMethod no longer fails when invoking proxified interface methods declared in extended interfaces. Previously if e.g. interface A extended B & C and a method was declared in B it wouldn't be found by WhiteboxImpl#getMethod since it only used to traverse the class hierarchy and not the structure of the extended interfaces.
* Whitebox#invokeMethod now works without specifying any method name which can increase the refactoring possibilities of the code when invoking unique private methods.
* Fixed the error message when a method couldn't be found and only one method was specified (for example when using Whitebox.getMethods(MyClass.class, "onlyOneMethod")).
* All field matcher strategies now throws FieldNotFoundException's instead of IllegalArgumentException's.
* Upgraded the Mockito API extension to use Mockito 1.7.
* Added mockPartial and mockStaticPartial to the Mockito API to allow for easier creation of partial mocks.

Change log 1.2 (released 2009-01-30)
------------------------------------
* Upgraded to Javassist 3.9
* The test result related artifacts were moved from package org.powermock.tests.result to org.powermock.core.spi.testresult.